<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fantasy Memo</string>
    <!-- Main menu -->
    <string name="start_game">Start game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="about_game">About game</string>
    <string name="exit">Exit</string>

    <!-- Statistics -->
    <string name="title_date">date / time</string>
    <string name="title_cards">cards</string>
    <string name="title_errors">errors</string>
    <string name="clear_statistics">clear</string>

    <!-- Statistics dialog -->
    <string name="statistics_dialog_text">Clear history?</string>
    <string name="statistics_empty_text">There are no games yet</string>

    <!-- Remove card dialog -->
    <string name="remove_card_dialog_title">Remove</string>
    <string name="remove_card_dialog_body">Remove card from favorites?</string>

    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <!-- About game -->
    <string name="rules_title">Game rules</string>
    <string name="rules_description">Find pairs of cards with the minimum number of errors.</string>
    <string name="favorites_description">Long press on an open card to add it to your favorites.</string>

    <string name="pictures_title">Pictures</string>
    <string name="pictures_description" translatable="false">GigaChat, Kandinsky 4.0.</string>

    <string name="graphics_title">Graphics</string>
    <string name="graphics_description" translatable="false">OpenGL 3.0 ES.</string>

    <string name="background_title">Background</string>
    <string name="black_color">Black</string>
    <string name="white_color">White</string>
    <string name="gray_color">Gray</string>

    <string name="material_title">Material</string>
    <string name="stone_material">Nephritis</string>
    <string name="plastic_material">Plastic</string>
    <string name="pattern_material">Pattern</string>

    <string name="cards_title">Cards number</string>
    <string name="cards12">12</string>
    <string name="cards16">16</string>
    <string name="cards20">20</string>
    <string name="cards30">30</string>

    <string name="rotation_speed_title">Card rotation</string>
    <string name="lowSpeed">×1</string>
    <string name="mediumSpeed">×2</string>
    <string name="fastSpeed">×3</string>

    <!-- Game snackBar -->
    <string name="add_card_to_favorites_text">Added to favorites</string>
    <string name="card_is_already_in_favorites_text">Already in favorites</string>
    <string name="full_favorites_list">The favorites list is full</string>

    <!-- Exit dialog -->
    <string name="exit_dialog_title_pause">Pause</string>
    <string name="exit_dialog_text_pause">Exit to main menu?</string>
    <string name="exit_dialog_text_statistics">Number of mistakes:</string>
</resources>