<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />



    <RadioGroup
        android:id="@+id/materialRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- marginLeft for support older version than API 17 -->
        <RadioButton
            android:id="@+id/woodRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/wood_material"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="sans" />

        <!-- marginRight for support older version than API 17 -->
        <RadioButton
            android:id="@+id/stoneRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/stone_material"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="sans" />

        <RadioButton
            android:id="@+id/plasticRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/plastic_material"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="sans" />

        <RadioButton
            android:id="@+id/patternRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/pattern_material"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="sans" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/cardsQuantityRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/lowCardsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards12"
            android:checked="true"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="283dp"
            tools:layout_editor_absoluteY="388dp" />

        <RadioButton
            android:id="@+id/mediumCardsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards16"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="458dp" />

        <RadioButton
            android:id="@+id/manyCardsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards20"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="312dp" />

        <RadioButton
            android:id="@+id/maxCardsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards30"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="312dp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
